[tool.poetry]
name = "adaptive-rag-llama3-2"
version = "0.1.0"
description = ""
authors = ["teruyo14 <teruyo.sui4@gmail.com>"]
readme = "README.md"
packages = [{include = "adaptive_rag_llama3"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
tiktoken = "^0.8.0"
langchain-nomic = "^0.1.3"
nomic = {extras = ["local"], version = "^3.1.2"}
langchain-ollama = "^0.2.0"
scikit-learn = "^1.5.2"
langgraph = "^0.2.39"
tavily-python = "^0.5.0"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
