[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["teruyo14 <teruyo.sui4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
langchain = "^0.3.3"
langchain-openai = "^0.2.2"
langgraph = "^0.2.34"
langchain-community = "^0.3.2"
google-search-results = "^2.4.2"
grandalf = "^0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
